--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burak Yücel - Anasayfa</title>
+    <title>Burak Yücel - BURAK.GEN.TR</title>
+    <meta name="description" content="Ben Burak Yücel, UI/UX tasarımcısı ve yapay zeka ile ilgileniyorum. Portfolyomda tasarımlarımı ve projelerimi keşfedin.">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +24,7 @@
 
             <div class="profile-section">
                 <img src="image/maskot.png" alt="Burak Yücel Profil Resmi" class="profile-img">
-                <h3>Burak Yücel</h3>
+                <h1>Burak Yücel</h1>
                 <p class="title">Öğrenci</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/burakk/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
